v1.2.2 Fix left align

--- a/src/components/BookedHeader/styles.css
+++ b/src/components/BookedHeader/styles.css
@@ -11,4 +11,5 @@
   background: rgba(0, 0, 0, 0.7);
   padding: 0.5em 1em;
   max-width: 80%;
+  text-align: left;
 }
